--- a/apps/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.html
+++ b/apps/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.html
@@ -20,7 +20,8 @@
               optionLabel="label"
               optionValue="value"
               styleClass="w-full"
-              required>
+              [editable]="true" (onChange)="onMatiereChange($event)" required>
+              >
             </p-dropdown>
           </div>
 
