--- a/apps/frontend-angular/src/app/carousel/carousel.component.html
+++ b/apps/frontend-angular/src/app/carousel/carousel.component.html
@@ -24,8 +24,30 @@
                 <div><strong>Date de Rendu:</strong> {{ assignment.dateDeRendu | date:'dd/MM/yyyy HH:mm' }}</div>
                 <div><strong>Note:</strong> {{ assignment.note !== null && assignment.note !== undefined ? (assignment.note | number:'1.0-2') + '/20' : 'Non noté' }}</div>
                 <div><strong>Statut:</strong> <p-tag [value]="assignment.statut" [severity]="getStatutSeverity(assignment.statut)"></p-tag></div>
-                <div><strong>Professeur:</strong> {{ assignment.professeur?.nomProf || 'N/A' }}</div>
-                <div><strong>Élève:</strong> {{ assignment.eleve?.nomEleve || 'N/A' }}</div>
+                <div class="user-info-line">
+                  <strong>Professeur:</strong>
+                  <p-avatar
+                    [image]="getProfilePictureFullUrl(assignment.professeur?.profilePicture)"
+                    [label]="!assignment.professeur?.profilePicture ? getAvatarLabelForUser(assignment.professeur?.nomProf) : ''"
+                    size="normal" shape="circle" styleClass="me-2 ms-1 user-avatar"></p-avatar>
+                  <span>{{ assignment.professeur?.nomProf || 'N/A' }}</span>
+                  <button pButton type="button" icon="pi pi-user" class="p-button-text p-button-sm p-button-rounded ms-1"
+                          (click)="openUserProfileModal(assignment.professeur?.idProf)"
+                          pTooltip="Voir profil Professeur" tooltipPosition="top"
+                          [disabled]="!assignment.professeur?.idProf"></button>
+                </div>
+                <div class="user-info-line">
+                  <strong>Élève:</strong>
+                  <p-avatar
+                    [image]="getProfilePictureFullUrl(assignment.eleve?.profilePicture)"
+                    [label]="!assignment.eleve?.profilePicture ? getAvatarLabelForUser(assignment.eleve?.nomEleve) : ''"
+                    size="normal" shape="circle" styleClass="me-2 ms-1 user-avatar"></p-avatar>
+                  <span>{{ assignment.eleve?.nomEleve || 'N/A' }}</span>
+                  <button pButton type="button" icon="pi pi-user" class="p-button-text p-button-sm p-button-rounded ms-1"
+                          (click)="openUserProfileModal(assignment.eleve?.idEleve)"
+                          pTooltip="Voir profil Élève" tooltipPosition="top"
+                          [disabled]="!assignment.eleve?.idEleve"></button>
+                </div>
                 <div class="tags-container">
                   <strong>Tags:</strong>
                   <ng-container *ngIf="assignment.tags && assignment.tags.length > 0; else noTags">
