--- a/apps/frontend-angular/src/app/home/home.component.html
+++ b/apps/frontend-angular/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="dashboard-container p-4" pFocusTrap>
   <div class="grid mb-4">
-    <div class="col-12">
-      <h2>Tableau de Bord</h2>
-    </div>
+    <div class="col-12 text-center">
+      <p-card header="Tableau de Bord" >
+      </p-card>    </div>
   </div>
 
 <div class="grid ">
