--- a/apps/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.html
+++ b/apps/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.html
@@ -101,7 +101,7 @@
 
           <div class="form-group">
             <label for="edit-note">Note (0-20)</label>
-            <div class="d-flex align-items-center">
+            <div class=" align-items-center">
               <p-slider [(ngModel)]="assignmentCopy.note" name="note" [min]="0" [max]="20" [step]="0.5" styleClass="w-full me-2"></p-slider>
               <span class="ms-2 me-2" style="min-width: 30px;">{{ assignmentCopy.note || 0 }}</span>
               <button pButton type="button" icon="pi pi-bolt" (click)="generateRandomNote()" class="p-button-sm p-button-outlined" pTooltip="Générer note aléatoire"></button>
