--- a/apps/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.scss
+++ b/apps/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.scss
@@ -19,10 +19,28 @@
   width: 100% !important;
 }
 .p-slider.w-full {
-  width: 100%;
+  flex: 1;
 }
 /* Adjust footer if buttons are inside the form */
 .p-dialog .p-dialog-footer {
   padding-top: 1rem;
   border-top: 1px solid #dee2e6;
+}
+
+::ng-deep .p-dialog .p-dialog-header {
+  background-color: #f8f9fa;
+  color: #212529;
+  border-bottom: 1px solid #dee2e6;
+}
+
+::ng-deep .p-dialog .p-dialog-header .p-dialog-title {
+  font-weight: 600;
+}
+
+::ng-deep .p-dialog .p-dialog-header .p-dialog-header-icon {
+  color: #6c757d;
+  &:hover, &:focus {
+    color: #000000;
+    background-color: #e9ecef;
+  }
 }
